# spacex-launch-prediction-capstone

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
app/: dashboard.py
app/assets/: custom.js  style.css
app/components/: charts.py  filters.py  maps.py
config/: config.yaml  dashboard_config.yaml  model_params.yaml
docs/: api_documentation.md  final_report.md  launch_site_map.html  methodology.md  model_comparison.md
notebooks/: 01_data_collection.ipynb  02_data_wrangling.ipynb  03_eda_sql.ipynb  04_geo_visuals.ipynb  05_modeling.ipynb  06_final_analysis.ipynb
requirements/: base.txt  dev.txt  prod.txt
scripts/: deploy_dashboard.sh  run_full_pipeline.sh  setup_environment.sh
src/: __init__.py  eval.py  features.py  fetch_api.py  scrape_wiki.py  train.py  utils.py  visualize.py  wrangle.py
tests/: __init__.py  test_features.py  test_models.py  test_utils.py  test_wrangle.py
