[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spacex_landing_prediction"
version = "0.1.0"
authors = [
  { name="[Izaz Khan]", email="[izaz10455@gmail.com]" },
]
description = "A data science capstone project to predict SpaceX Falcon 9 first stage landing success."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/[your-username]/spacex-landing-capstone"
"Bug Tracker" = "https://github.com/[your-username]/spacex-landing-capstone/issues"